--- a/notebooks/task1.ipynb
+++ b/notebooks/task1.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fewshot.data.fix_quotes('../data/small/styles.csv', '../data/small/styles_quoted.csv')"
+    "fewshot.data.fix_quotes('../data/fashion-dataset/styles.csv', '../data/fashion-dataset/styles_quoted.csv')"
    ]
   },
   {
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,17 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loss_func = nn.CrossEntropyLoss()\n",
-    "optimizer = optim.Adam(model.parameters(), lr=0.001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -131,102 +121,97 @@
      "output_type": "stream",
      "text": [
       "------------- epoch:  0\n",
-      "Training loss: 0.740\n",
-      "Validation loss: 1.258\n",
-      "Validation accuracy: 0.729\n",
+      "Training loss: 0.732\n",
+      "Validation loss: 1.064\n",
+      "Validation accuracy: 0.737\n",
       "------------- epoch:  1\n",
-      "Training loss: 0.453\n",
-      "Validation loss: 0.953\n",
-      "Validation accuracy: 0.787\n",
-      "------------- epoch:  2\n",
-      "Training loss: 0.392\n",
-      "Validation loss: 0.913\n",
-      "Validation accuracy: 0.792\n",
-      "------------- epoch:  3\n",
-      "Training loss: 0.340\n",
-      "Validation loss: 0.943\n",
+      "Training loss: 0.450\n",
+      "Validation loss: 0.975\n",
       "Validation accuracy: 0.801\n",
-      "------------- epoch:  4\n",
-      "Training loss: 0.311\n",
-      "Validation loss: 1.162\n",
-      "Validation accuracy: 0.789\n",
-      "------------- epoch:  5\n",
-      "Training loss: 0.290\n",
-      "Validation loss: 1.004\n",
+      "------------- epoch:  2\n",
+      "Training loss: 0.386\n",
+      "Validation loss: 0.976\n",
+      "Validation accuracy: 0.795\n",
+      "------------- epoch:  3\n",
+      "Training loss: 0.349\n",
+      "Validation loss: 1.057\n",
       "Validation accuracy: 0.816\n",
+      "------------- epoch:  4\n",
+      "Training loss: 0.320\n",
+      "Validation loss: 0.821\n",
+      "Validation accuracy: 0.817\n",
+      "------------- epoch:  5\n",
+      "Training loss: 0.281\n",
+      "Validation loss: 1.153\n",
+      "Validation accuracy: 0.792\n",
       "------------- epoch:  6\n",
       "Training loss: 0.284\n",
-      "Validation loss: 0.882\n",
-      "Validation accuracy: 0.823\n",
+      "Validation loss: 0.853\n",
+      "Validation accuracy: 0.840\n",
       "------------- epoch:  7\n",
-      "Training loss: 0.263\n",
-      "Validation loss: 0.907\n",
-      "Validation accuracy: 0.835\n",
+      "Training loss: 0.259\n",
+      "Validation loss: 0.959\n",
+      "Validation accuracy: 0.837\n",
       "------------- epoch:  8\n",
-      "Training loss: 0.251\n",
-      "Validation loss: 1.118\n",
-      "Validation accuracy: 0.801\n",
-      "------------- epoch:  9\n",
-      "Training loss: 0.234\n",
-      "Validation loss: 0.894\n",
-      "Validation accuracy: 0.824\n",
-      "------------- epoch:  10\n",
-      "Training loss: 0.229\n",
-      "Validation loss: 0.989\n",
-      "Validation accuracy: 0.818\n",
-      "------------- epoch:  11\n",
-      "Training loss: 0.229\n",
-      "Validation loss: 0.943\n",
-      "Validation accuracy: 0.849\n",
-      "------------- epoch:  12\n",
-      "Training loss: 0.201\n",
-      "Validation loss: 0.966\n",
+      "Training loss: 0.241\n",
+      "Validation loss: 0.900\n",
       "Validation accuracy: 0.842\n",
+      "------------- epoch:  9\n",
+      "Training loss: 0.243\n",
+      "Validation loss: 0.930\n",
+      "Validation accuracy: 0.832\n",
+      "------------- epoch:  10\n",
+      "Training loss: 0.225\n",
+      "Validation loss: 1.335\n",
+      "Validation accuracy: 0.739\n",
+      "------------- epoch:  11\n",
+      "Training loss: 0.221\n",
+      "Validation loss: 1.120\n",
+      "Validation accuracy: 0.825\n",
+      "------------- epoch:  12\n",
+      "Training loss: 0.209\n",
+      "Validation loss: 1.035\n",
+      "Validation accuracy: 0.848\n",
       "------------- epoch:  13\n",
-      "Training loss: 0.210\n",
-      "Validation loss: 1.147\n",
-      "Validation accuracy: 0.812\n",
+      "Training loss: 0.208\n",
+      "Validation loss: 0.962\n",
+      "Validation accuracy: 0.847\n",
       "------------- epoch:  14\n",
       "Training loss: 0.205\n",
-      "Validation loss: 0.979\n",
-      "Validation accuracy: 0.833\n"
+      "Validation loss: 1.031\n",
+      "Validation accuracy: 0.839\n",
+      "------------- epoch:  15\n",
+      "Training loss: 0.182\n",
+      "Validation loss: 0.947\n",
+      "Validation accuracy: 0.857\n",
+      "------------- epoch:  16\n",
+      "Training loss: 0.187\n",
+      "Validation loss: 0.985\n",
+      "Validation accuracy: 0.835\n",
+      "------------- epoch:  17\n",
+      "Training loss: 0.181\n",
+      "Validation loss: 0.904\n",
+      "Validation accuracy: 0.848\n",
+      "------------- epoch:  18\n",
+      "Training loss: 0.169\n",
+      "Validation loss: 0.982\n",
+      "Validation accuracy: 0.848\n",
+      "------------- epoch:  19\n",
+      "Training loss: 0.166\n",
+      "Validation loss: 1.040\n",
+      "Validation accuracy: 0.846\n"
      ]
     }
    ],
    "source": [
-    "fewshot.trainer.run_training(model, 15, data, optimizer, loss_func, gpu_id=0, root='./traces/')"
+    "loss_func = nn.CrossEntropyLoss()\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "fewshot.trainer.run_training(model, 20, data, optimizer, loss_func, gpu_id=0, root='./traces/')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best_checkpoint = torch.load('traces/gpu_0_Jun08_0927//model_epoch_11.pth')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.load_state_dict(best_checkpoint['model_state_dict'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c1, c5, occ = fewshot.trainer.evaluate(model.cuda(), data, 0, data.n_classes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -235,32 +220,35 @@
      "text": [
       "Category                    Top-1     Top-5\n",
       "-------------------------------------------\n",
-      "Tshirts                      93.3     100.0\n",
+      "Tshirts                      89.1      99.2\n",
       "Shirts                       98.3     100.0\n",
-      "Casual Shoes                 82.4      98.3\n",
+      "Casual Shoes                 86.6      98.3\n",
       "Watches                     100.0     100.0\n",
-      "Sports Shoes                 86.6      99.2\n",
-      "Kurtas                       94.0     100.0\n",
-      "Tops                         53.0      99.1\n",
-      "Handbags                     92.4      97.5\n",
-      "Heels                        84.6      98.3\n",
+      "Sports Shoes                 73.9     100.0\n",
+      "Kurtas                       94.9      99.1\n",
+      "Tops                         66.7     100.0\n",
+      "Handbags                     95.0      99.2\n",
+      "Heels                        89.7      99.1\n",
       "Sunglasses                  100.0     100.0\n",
       "Wallets                      95.7      99.1\n",
-      "Flip Flops                   90.3      97.3\n",
-      "Sandals                      66.4      98.3\n",
-      "Briefs                       96.6     100.0\n",
-      "Belts                        98.2      99.1\n",
-      "Backpacks                    76.3      96.5\n",
-      "Socks                        84.5      97.9\n",
-      "Formal Shoes                 70.4     100.0\n",
+      "Flip Flops                   87.6      96.5\n",
+      "Sandals                      78.4     100.0\n",
+      "Briefs                       95.5     100.0\n",
+      "Belts                        97.3      99.1\n",
+      "Backpacks                    84.2      99.1\n",
+      "Socks                        77.3      93.8\n",
+      "Formal Shoes                 77.8      99.1\n",
       "Perfume and Body Mist         0.0       0.0\n",
       "Jeans                        99.1     100.0\n",
       "===========================================\n",
-      "Average                      83.1      94.0\n"
+      "Average                      84.4      94.1\n"
      ]
     }
    ],
    "source": [
+    "best_checkpoint = torch.load('traces/gpu_0_Jun09_0014/model_epoch_18.pth')\n",
+    "model.load_state_dict(best_checkpoint['model_state_dict'])\n",
+    "c1, c5, occ = fewshot.trainer.evaluate(model.cuda(), data, 0, data.n_classes)\n",
     "fewshot.trainer.pretty_print_eval(c1, c5, data)"
    ]
   },
@@ -273,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -297,65 +285,78 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss: 0.630\n",
-      "Validation loss: 1.145\n",
-      "Validation accuracy: 0.721\n",
+      "Training loss: 0.463\n",
+      "Validation loss: 0.766\n",
+      "Validation accuracy: 0.690\n",
       "------------- epoch:  1\n",
-      "Training loss: 0.384\n",
-      "Validation loss: 0.780\n",
-      "Validation accuracy: 0.808\n",
+      "Training loss: 0.274\n",
+      "Validation loss: 0.628\n",
+      "Validation accuracy: 0.772\n",
       "------------- epoch:  2\n",
-      "Training loss: 0.308\n",
-      "Validation loss: 0.776\n",
-      "Validation accuracy: 0.803\n",
+      "Training loss: 0.209\n",
+      "Validation loss: 0.604\n",
+      "Validation accuracy: 0.779\n",
       "------------- epoch:  3\n",
-      "Training loss: 0.268\n",
-      "Validation loss: 0.776\n",
-      "Validation accuracy: 0.809\n",
-      "------------- epoch:  4\n",
-      "Training loss: 0.249\n",
-      "Validation loss: 0.892\n",
-      "Validation accuracy: 0.813\n",
-      "------------- epoch:  5\n",
-      "Training loss: 0.240\n",
-      "Validation loss: 0.920\n",
-      "Validation accuracy: 0.803\n",
-      "------------- epoch:  6\n",
-      "Training loss: 0.220\n",
-      "Validation loss: 0.781\n",
-      "Validation accuracy: 0.815\n",
-      "------------- epoch:  7\n",
-      "Training loss: 0.207\n",
-      "Validation loss: 0.951\n",
+      "Training loss: 0.173\n",
+      "Validation loss: 0.640\n",
       "Validation accuracy: 0.788\n",
-      "------------- epoch:  8\n",
-      "Training loss: 0.200\n",
-      "Validation loss: 0.842\n",
-      "Validation accuracy: 0.827\n",
-      "------------- epoch:  9\n",
-      "Training loss: 0.187\n",
-      "Validation loss: 0.880\n",
-      "Validation accuracy: 0.828\n",
-      "------------- epoch:  10\n",
-      "Training loss: 0.177\n",
-      "Validation loss: 0.852\n",
-      "Validation accuracy: 0.812\n",
-      "------------- epoch:  11\n",
-      "Training loss: 0.165\n",
-      "Validation loss: 0.858\n",
-      "Validation accuracy: 0.836\n",
-      "------------- epoch:  12\n",
-      "Training loss: 0.172\n",
-      "Validation loss: 0.814\n",
-      "Validation accuracy: 0.815\n",
-      "------------- epoch:  13\n",
-      "Training loss: 0.189\n",
-      "Validation loss: 0.732\n",
-      "Validation accuracy: 0.838\n",
-      "------------- epoch:  14\n",
+      "------------- epoch:  4\n",
+      "Training loss: 0.159\n",
+      "Validation loss: 0.620\n",
+      "Validation accuracy: 0.774\n",
+      "------------- epoch:  5\n",
       "Training loss: 0.155\n",
-      "Validation loss: 0.781\n",
-      "Validation accuracy: 0.848\n"
+      "Validation loss: 0.636\n",
+      "Validation accuracy: 0.791\n",
+      "------------- epoch:  6\n",
+      "Training loss: 0.133\n",
+      "Validation loss: 0.528\n",
+      "Validation accuracy: 0.831\n",
+      "------------- epoch:  7\n",
+      "Training loss: 0.133\n",
+      "Validation loss: 0.625\n",
+      "Validation accuracy: 0.810\n",
+      "------------- epoch:  8\n",
+      "Training loss: 0.117\n",
+      "Validation loss: 0.631\n",
+      "Validation accuracy: 0.814\n",
+      "------------- epoch:  9\n",
+      "Training loss: 0.127\n",
+      "Validation loss: 0.581\n",
+      "Validation accuracy: 0.833\n",
+      "------------- epoch:  10\n",
+      "Training loss: 0.106\n",
+      "Validation loss: 0.588\n",
+      "Validation accuracy: 0.835\n",
+      "------------- epoch:  11\n",
+      "Training loss: 0.116\n",
+      "Validation loss: 0.656\n",
+      "Validation accuracy: 0.801\n",
+      "------------- epoch:  12\n",
+      "Training loss: 0.102\n",
+      "Validation loss: 0.551\n",
+      "Validation accuracy: 0.842\n",
+      "------------- epoch:  13\n",
+      "Training loss: 0.105\n",
+      "Validation loss: 0.620\n",
+      "Validation accuracy: 0.829\n",
+      "------------- epoch:  14\n",
+      "Training loss: 0.102\n",
+      "Validation loss: 0.706\n",
+      "Validation accuracy: 0.797\n",
+      "------------- epoch:  15\n",
+      "Training loss: 0.091\n",
+      "Validation loss: 0.596\n",
+      "Validation accuracy: 0.831\n",
+      "------------- epoch:  16\n",
+      "Training loss: 0.081\n",
+      "Validation loss: 0.702\n",
+      "Validation accuracy: 0.844\n",
+      "------------- epoch:  17\n",
+      "Training loss: 0.083\n",
+      "Validation loss: 0.606\n",
+      "Validation accuracy: 0.853\n",
+      "------------- epoch:  18\n"
      ]
     }
    ],
@@ -364,9 +365,9 @@
     "num_ftrs = model.fc.in_features\n",
     "model.fc = nn.Linear(num_ftrs, data.n_classes)\n",
     "\n",
-    "loss_func = fewshot.focal.FocalLoss(gamma=.5)\n",
+    "loss_func = fewshot.focal.FocalLoss(gamma=2)\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
-    "fewshot.trainer.run_training(model, 15, data, optimizer, loss_func, gpu_id=0, root='./traces/')"
+    "fewshot.trainer.run_training(model, 20, data, optimizer, loss_func, gpu_id=0, root='./traces/')"
    ]
   },
   {
