--- a/notebooks/maml-exploration.ipynb
+++ b/notebooks/maml-exploration.ipynb
@@ -248,26 +248,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracies = []\n",
+    "losses = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "------------------------ epoch:  0\n",
-      "epoch loss:      204.2 epoch accuracy:       30.8\n",
-      "------------------------ epoch:  1\n",
-      "epoch loss:      193.9 epoch accuracy:       32.4\n",
-      "------------------------ epoch:  2\n",
-      "epoch loss:      190.0 epoch accuracy:       33.9\n",
-      "------------------------ epoch:  3\n",
-      "curr loss:      182.3 curr accuracy:       38.2\r"
+      "curr loss:      160.0 curr accuracy:       46.5\r"
      ]
     }
    ],
    "source": [
-    "losses = []\n",
-    "accuracies = []\n",
-    "for epoch in range(10):\n",
+    "for epoch in range(20):\n",
     "    print('------------------------ epoch: ', epoch)\n",
     "    epoch_losses = []\n",
     "    epoch_accuracies = []\n",
@@ -289,6 +291,35 @@
     "        \n",
     "        \n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.3079583262403806,\n",
+       " 0.3242916593949,\n",
+       " 0.33866665909687677,\n",
+       " 0.37137499153614045,\n",
+       " 0.4259999910990397,\n",
+       " 0.4304166575272878,\n",
+       " 0.43929165800412495,\n",
+       " 0.4549583256244659,\n",
+       " 0.5156249860922496,\n",
+       " 0.4728749871253967]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracies"
    ]
   },
   {
