post final commit - acc update for maml

--- a/notebooks/maml-exploration.ipynb
+++ b/notebooks/maml-exploration.ipynb
@@ -263,8 +263,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "------------------------ epoch:  0\n",
-      "curr loss:      160.0 curr accuracy:       46.5\r"
+      "------------------------ epoch:  0\n"
      ]
     }
    ],
@@ -295,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -310,10 +309,30 @@
        " 0.43929165800412495,\n",
        " 0.4549583256244659,\n",
        " 0.5156249860922496,\n",
-       " 0.4728749871253967]"
+       " 0.4728749871253967,\n",
+       " 0.4897499859333038,\n",
+       " 0.5009166518847148,\n",
+       " 0.4914166529973348,\n",
+       " 0.5338749885559082,\n",
+       " 0.5185416529575984,\n",
+       " 0.5241249899069468,\n",
+       " 0.5304166545470556,\n",
+       " 0.5477083156506221,\n",
+       " 0.5468333154916764,\n",
+       " 0.5548749883969625,\n",
+       " 0.5459166506926219,\n",
+       " 0.5742916544278462,\n",
+       " 0.5995416581630707,\n",
+       " 0.6230833252271016,\n",
+       " 0.593041651447614,\n",
+       " 0.6411666512489319,\n",
+       " 0.6284999847412109,\n",
+       " 0.6232916553815205,\n",
+       " 0.6067916591962178,\n",
+       " 0.6226249853769938]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
